# pcc-1

./: CMakeLists.txt  README.md  README.txt  data_gen.py  dependencies.txt  install.sh  plot_gen.py  run_tests.sh
include/: boyer_moore.h  brute_force.h  kmp.h  levenshtein.h  pattern_occurrence.h  shift_or.h  utils.h  wu_mamber.h
src/: boyer_moore.cpp  brute_force.cpp  kmp.cpp  levenshtein.cpp  main.cpp  shift_or.cpp  utils.cpp  wu_mamber.cpp
